[package]
name = "seq_watcher"
version = "0.1.0"
authors = ["Thomas Mundar <thomas@mundar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3"

[[bench]]
name="benchmarks"
harness=false
