[package]
name = "seq_watcher"
version = "0.1.0"
authors = ["Thomas Mundar <thomas@mundar.com>"]
edition = "2018"
description = "A pair of structures for monitoring a stream of data for one or more sequences."
license = "MIT"
repository = "https://github.com/Mundar/seq_watcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3"

[[bench]]
name="benchmarks"
harness=false
